# checkpointer

./: .gitignore  ATTRIBUTION.md  LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.py
checkpointer/: __init__.py  checkpoint.py  env.py  fn_ident.py  fn_string.py  fnhashtest.py  fnstricttest.py  function_body.py  function_body_v1.py  import_mappings.py  object_hash.py  print_checkpoint.py  storage.py  test_checkpointer.py  tf.py  types.py  utils.py
checkpointer/storages/: __init__.py  bcolz_storage.py  memory_storage.py  mongo_storage.py  pickle_storage.py  storage.py  test_import_mappings.py
