[project]
name = "checkpointer"
version = "2.1.0"
requires-python = ">=3.12"
dependencies = []
authors = [
  {name = "Hampus Hallman"}
]
description = "A Python library for memoizing function results with support for multiple storage backends, async runtimes, and automatic cache invalidation"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Reddan/checkpointer.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["checkpointer", "checkpointer.storages"]
