[project]
name = "checkpointer"
version = "2.10.0"
requires-python = ">=3.11"
dependencies = []
authors = [
  {name = "Hampus Hallman"}
]
description = "A Python library for memoizing function results with support for multiple storage backends, async runtimes, and automatic cache invalidation"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/Reddan/checkpointer.git"

[dependency-groups]
dev = [
  "numpy>=2.2.1",
  "omg>=1.2.3",
  "poethepoet>=0.30.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "relib>=1.0.8",
  "torch>=2.5.1",
]

[tool.poe.tasks]
tests = "pytest checkpointer/test_checkpointer.py"
tests-debug = "poe tests -s"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["checkpointer", "checkpointer.storages"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
